flex section align bug

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ ul {
 }
 
 .body-li li {
-    margin-left: 2.5rem;
+    margin-left: 1.875rem;
 
 }
 .inv-port li{
